# CMakeList.txt : CMake project for STEMcarta, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("STEMcarta")

# Add source to this project's executable.
add_executable (STEMcarta "STEMcarta.cpp" "STEMcarta.h")

# TODO: Add tests and install targets if needed.
